<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.amanzi.index</groupId>
  <artifactId>amanzi-index</artifactId>
  <version>0.2-SNAPSHOT</version>
  <name>Amanzi Index Components</name>
  <url>http://github.com/craigtaverner/amanzi-index/</url>
  <inceptionYear>December 2010</inceptionYear>

<!-- Temporarily disabled new neo4j 1.2 dependencies so we have 1.1 support in initial versions
  <packaging>bundle</packaging>
  <parent>
    <artifactId>parent-pom</artifactId>
    <groupId>org.neo4j</groupId>
    <version>8-SNAPSHOT</version>
  </parent>
-->

  <scm>
    <url>git@github.com:craigtaverner/amanzi-index.git</url>
  </scm>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <developers>
    <developer>
      <id>craigtaverner</id>
      <name>Craig Taverner</name>
      <email>craig [at] amanzi.com</email>
      <timezone>+1</timezone>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>GNU Affero General Public License, Version 3</name>
      <url>http://www.gnu.org/licenses/agpl-3.0-standalone.html</url>
    </license>
  </licenses>

  <dependencies>
<!--
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-kernel</artifactId>
      <version>1.2-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-lucene-index</artifactId>
      <version>0.2-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-index</artifactId>
      <version>1.2-SNAPSHOT</version>
    </dependency>
-->
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-kernel</artifactId>
      <version>1.1</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <repositories>
    <repository>
      <id>neo4j-public-repository</id>
      <name>Publically available Maven 2 repository for Neo4j</name>
      <url>http://m2.neo4j.org</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <groups>
            <group>
              <title>Composite Indexing</title>
              <packages>org.amanzi.index:org.amanzi.index.*</packages>
            </group>
          </groups>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <forkMode>pertest</forkMode>
          <argLine>-Xms128m -Xmx2048m -XX:MaxPermSize=512m</argLine>
          <testFailureIgnore>false</testFailureIgnore>
          <skip>false</skip>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

</project>
